--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                         </div>
                         <div style="padding: 0 0 0px 10px">
                             <a class="text">&#9634; Start-up Project Support</a>
-                            <a href="ressources/Booster.pdf" target="_blank" title="Open pdf file" class="pdf-link">
+                            <a href="ressources/StudyStartUpBoosterPortrait.pdf" target="_blank" title="Open pdf file" class="pdf-link">
                                 <i class="fa-solid fa-link"></i>
                             </a>
                             <div class="slide-popup">
@@ -212,5 +212,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
