--- a/index.html
+++ b/index.html
@@ -207,11 +207,12 @@
         </section>
     </footer>
     <a href="#about" class="button fixed-scroll-button" aria-label="Scroll to Top">
-        &uarr; Go to top
+        &uarr;
     </a>
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
