--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </h1>
             </a>
             <ul class="nav-menu">
-                <!--<button id="menu-close-button" class="fas fa-times"></button>-->
+                <button id="menu-close-button" class="fas fa-times"></button>
                 <li class="nav-item">
                     <a href="#" class="nav-link">Home</a>
                 </li>
@@ -212,6 +212,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
