--- a/LegalNotice.html
+++ b/LegalNotice.html
@@ -62,7 +62,7 @@
     </section>
     <section class="about-section"></section>
         <a href="#top" class="button fixed-scroll-button" aria-label="Scroll to Top">
-        &uarr; Go to top
+        &uarr;
     </a>
     </body>
 </html>
