--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         document set to obtain <b>first-time approval</b> from regulatory authorities.
                     </p>
                     <span class="buttons">
-                        <a href="#services" class="button">&darr; Learn more</a>
+                        <a href="#services" class="button">&#129031; Learn more</a>
                     </span>
                 </div>
             </div>
@@ -134,7 +134,7 @@
                             <a class="text">&#9634; Regulatory Team Training</a>
                         </div>
                         <span class="buttons">
-                            <a href="#contact" class="button">&darr; Leave a message</a>
+                            <a href="#contact" class="button">&#129031; Leave a message</a>
                         </span>
                     </div>
                 </div>
@@ -206,12 +206,11 @@
             </div>
         </section>
     </footer>
-    <a href="#about" class="button fixed-scroll-button" aria-label="Scroll to Top">
-        &uarr;
-    </a>
+    <a href="#about" class="button fixed-scroll-button" aria-label="Scroll to Top">&#8679;</a>
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
