--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
                             <a href="ressources/RegulatoryFlashAudit.pdf" target="_blank" title="Open pdf file" class="pdf-link">
                                 <i class="fa-solid fa-link"></i>
                             </a>
-                            <div class="slide-popup">
-                                <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTd_D7rpZrtzR8SQBX541YU7lYCuGjtz0jTRPhXlYoEdtW4FOajlo_mGOUqeZferIaaQIsHQ07NBOq_/pubembed?start=false&loop=false&delayms=3000" frameborder="0" width="397" height="588" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+                            <div popover id="pop-up">
+                                <embed src="ressources/RegulatoryFlashAudit.pdf" type="application/pdf" width="100%" height="100%" /> 
                             </div>
                         </div>
                         <div style="padding: 0 0 8px 10px">
@@ -210,6 +210,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
