--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
                             <a href="ressources/StudyStartUpBoosterPortrait.pdf" target="_blank" title="Open pdf file" class="pdf-link">
                                 <i class="fa-solid fa-link"></i>
                             </a>
-                            <div class="slide-popup">
-                            <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRJQhiVrElsQBSmCxALBeb-Pz8xqZsNoDJ2PvJ7parxiVvHWNjiGz5TbjVow8tToKGTCjwdDcCYkZZx/pubembed?start=false&loop=false&delayms=3000" frameborder="0" width="588" height="395" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+                            <div popover id="pop-up">
+                                <embed src="ressources/StudyStartUpBoosterPortrait.pdf" type="application/pdf" width="100%" height="100%" /> 
                             </div>
                         </div>
                         <div style="padding: 0 0 0px 10px">
@@ -210,6 +210,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
