--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
                         </div>
                         <div style="padding: 0 0 28px 10px; position: relative;">
                             <a class="text">&#9634; Readiness Audits</a>
-                            <a href="ressources/RegulatoryFlashAudit.pdf" target="_blank" title="Open pdf file" class="pdf-link">
+                            <a popovertarget="pop-up-audit" title="Open pdf file in popup" class="pdf-link">
                                 <i class="fa-solid fa-link"></i>
                             </a>
-                            <div popover id="pop-up">
+                            <div popover id="pop-up-audit">
                                 <iframe src="ressources/RegulatoryFlashAudit.pdf" width="100%" height="100%" style="border: none;"></iframe>
                             </div>
                         </div>
@@ -118,12 +118,15 @@
                         <div style="padding: 0 0 8px 10px">
                             <a class="text" style="font-size: 1.2rem; color: #3d7489">Support</a>
                         </div>
+                        <div style="padding: 0 0 8px 10px">
+                            <a class="text" style="font-size: 1.2rem; color: #3d7489">Support</a>
+                        </div>
                         <div style="padding: 0 0 0px 10px; position: relative;">
                             <a class="text">&#9634; Start-up Project Support</a>
-                            <a href="ressources/StudyStartUpBoosterPortrait.pdf" target="_blank" title="Open pdf file" class="pdf-link">
+                            <a popovertarget="pop-up-support" title="Open pdf file in popup" class="pdf-link">
                                 <i class="fa-solid fa-link"></i>
                             </a>
-                            <div popover id="pop-up">
+                            <div popover id="pop-up-support">
                                 <iframe src="ressources/StudyStartUpBoosterPortrait.pdf" width="100%" height="100%" style="border: none;"></iframe>
                             </div>
                         </div>
@@ -210,6 +213,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
