--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                                 <i class="fa-solid fa-link"></i>
                             </a>
                             <div popover id="pop-up-audit">
-                                <iframe src="ressources/RegulatoryFlashAudit.pdf" width="100%" height="100%" style="border: none;"></iframe>
+                                <embed src="ressources/RegulatoryFlashAudit.pdf" type="application/pdf" width="100%" height="100%" style="border: none;">
                             </div>
                         </div>
                         <div style="padding: 0 0 8px 10px">
@@ -127,7 +127,7 @@
                                 <i class="fa-solid fa-link"></i>
                             </a>
                             <div popover id="pop-up-support">
-                                <iframe src="ressources/StudyStartUpBoosterPortrait.pdf" width="100%" height="100%" style="border: none;"></iframe>
+                                <embed src="ressources/StudyStartUpBoosterPortrait.pdf" type="application/pdf" width="100%" height="100%" style="border: none;">
                             </div>
                         </div>
                         <div style="padding: 0 0 0px 10px">
