--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="color-scheme" content="only light" />
     <title>Longfort Consulting | Clinical Studies Consultant</title>
     <meta name="description"
-    content="Longfort Consulting offers regulatory expertise to secure clinical trial approval in a timely and quality-controlled manner.
+        content="Longfort Consulting offers regulatory expertise to secure clinical trial approval in a timely and quality-controlled manner.
     Benefit from our guidance in oncology, immunotherapy, rare diseases, pediatrics, and gene therapy to achieve successful trial outcomes.
-    Conduct robust clinical trials using bulletproof protocols and a tailored document set to obtain first-time approval from regulatory authorities."/>
+    Conduct robust clinical trials using bulletproof protocols and a tailored document set to obtain first-time approval from regulatory authorities." />
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
     <link rel="stylesheet" href="style.css" />
@@ -81,17 +81,17 @@
                             <a class="text" style="font-size: 1.2rem; color: #3d7489">Regulatory Strategy</a>
                         </div>
                         <div style="padding: 0 0 0px 10px">
-                            <a class="text">&#9634; Worldwide Submissions</a>                            
+                            <a class="text">&#9634; Worldwide Submissions</a>
                         </div>
                         <div style="padding: 0 0 0px 10px">
                             <a class="text">&#9634; Complex Trial Strategy</a>
                         </div>
-                        <div style="padding: 0 0 28px 10px; position: relative;">
+                        <div style="padding: 0 0 28px 10px; position: relative;" class="flyover-container">
                             <a class="text">&#9634; Readiness Audits</a>
-                            <a popovertarget="pop-up-audit" title="Open pdf file in popup" class="pdf-link">
+                            <a href="ressources/RegulatoryFlashAudit.pdf" target="_blank" class="pdf-link">
                                 <i class="fa-solid fa-link"></i>
                             </a>
-                            <div popover id="pop-up-audit">
+                            <div id="pop-up-audit" class="flyover-content">
                                 <embed src="ressources/RegulatoryFlashAudit.pdf" type="application/pdf" width="100%" height="100%" style="border: none;">
                             </div>
                         </div>
@@ -107,109 +107,3 @@
                             <a class="text">&#9634; ICF Adaptation</a>
                         </div>
                         <div style="padding: 0 0 0px 10px">
-                            <a class="text">&#9634; CA and EC Submissions</a>
-                        </div>
-                        <div style="padding: 0 0 0px 10px">
-                            <a class="text">&#9634; Contract and Budget Negotiations</a>
-                        </div>
-                        <div style="padding: 0 0 28px 10px">
-                            <a class="text">&#9634; Sites Activation</a>
-                        </div>
-                        <div style="padding: 0 0 8px 10px">
-                            <a class="text" style="font-size: 1.2rem; color: #3d7489">Support</a>
-                        </div>
-                        <div style="padding: 0 0 8px 10px">
-                            <a class="text" style="font-size: 1.2rem; color: #3d7489">Support</a>
-                        </div>
-                        <div style="padding: 0 0 0px 10px; position: relative;">
-                            <a class="text">&#9634; Start-up Project Support</a>
-                            <a popovertarget="pop-up-support" title="Open pdf file in popup" class="pdf-link">
-                                <i class="fa-solid fa-link"></i>
-                            </a>
-                            <div popover id="pop-up-support">
-                                <embed src="ressources/StudyStartUpBoosterPortrait.pdf" type="application/pdf" width="100%" height="100%" style="border: none;">
-                            </div>
-                        </div>
-                        <div style="padding: 0 0 0px 10px">
-                            <a class="text">&#9634; Clinical Operations Assessment</a>
-                        </div>
-                        <div style="padding: 0 0 28px 10px">
-                            <a class="text">&#9634; Regulatory Team Training</a>
-                        </div>
-                        <span class="buttons">
-                            <a href="#contact" class="button">&#129031; Leave a message</a>
-                        </span>
-                    </div>
-                </div>
-                <div class="about-image-wrapper">
-                    <img src="ressources/timely.webp"
-                        alt="Glass beakers on a table in a sunny, outdoor setting, representing scientific research."
-                        class="about-image" />
-                </div>
-            </div>
-            <div class="about-details"></div>
-        </section>
-        <section id="contact" class="about-section">
-            <div class="section-content">
-                <div class="about-details">
-                    <h2 class="section-title">Contact</h2>
-                    <div>
-                        <p class="text">
-                            Have a question? Please fill out the form below, or feel free to contact me directly.
-                        </p>
-                        <form action="https://api.web3forms.com/submit" method="POST" class="styled-form">
-                            <input type="hidden" name="access_key" value="9aa4c03f-af54-404b-b9f9-ecf3e5fa28b5" />
-                            <div class="form-group">
-                                <label for="name">Name</label>
-                                <input type="text" id="name" name="Name" required />
-                            </div>
-                            <div class="form-group">
-                                <label for="email">Email</label>
-                                <input type="email" id="email" name="email" required />
-                            </div>
-                            <div class="form-group">
-                                <label for="message">Message</label>
-                                <textarea id="message" name="Message" rows="5" required contenteditable="true">I am interested in your services and would like to schedule a call.</textarea>
-                            </div>
-                            <input type="checkbox" name="botcheck" class="hidden" style="display: none" />
-                            <button type="submit" class="button">Send</button>
-                        </form>
-                        <div class="social-link-list">
-                            <a href="mailto:sabrina.guittard@longfort-consulting.com" class="social-link"><i
-                                    class="fa-solid fa-envelope"></i> email</a>
-                            <a href="https://www.linkedin.com/in/sabrina-guittard-3106272b" target="_blank"
-                                class="social-link">Linked<i class="fa-brands fa-linkedin"></i></a>
-                            <a href="tel:+33652502498" class="social-link"><i class="fa fa-phone"></i>+33
-                                652502498</a>
-                        </div>
-                        <p class="text">Longfort Consulting - Toulouse, France</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section id="blog" class="about-section">
-            <div class="blog-content">
-                <div class="about-details">
-                    <h2 class="section-title">Blog</h2>
-                    <script src="https://elfsightcdn.com/platform.js" async></script>
-                    <div class="elfsight-app-37e8d025-f183-418a-832d-4a11719773ef" data-elfsight-app-lazy></div>
-                </div>
-            </div>
-        </section>
-    </main>
-    <footer class="footer">
-        <section class="footer-section">
-            <div>
-                <div class="footer">
-                    <a>© 2025 Longfort Consulting</a><a>|</a>
-                    <a style="color: #3b3737" href="LegalNotice.html">Legal notice</a><a>|</a>
-                    <a>&#127850;Cookie-free</a><a>|</a>
-                    <a>&#x1F33F;0.2g CO²/visit</a>
-                </div>
-            </div>
-        </section>
-    </footer>
-    <a href="#about" class="button fixed-scroll-button" aria-label="Scroll to Top">&#8679;</a>
-    <script src="script.js"></script>
-</body>
-</html>
