--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         document set to obtain <b>first-time approval</b> from regulatory authorities.
                     </p>
                     <span class="buttons">
-                        <a href="#services" class="button">&#8681; Learn more</a>
+                        <a href="#services" class="button">Learn more</a>
                     </span>
                 </div>
             </div>
@@ -134,7 +134,7 @@
                             <a class="text">&#9634; Regulatory Team Training</a>
                         </div>
                         <span class="buttons">
-                            <a href="#contact" class="button">&#8681; Leave a message</a>
+                            <a href="#contact" class="button">Leave a message</a>
                         </span>
                     </div>
                 </div>
@@ -211,6 +211,7 @@
 </body>
 
 </html>
+
 
 
 
