Replace up arrow character in LegalNotice.html

--- a/LegalNotice.html
+++ b/LegalNotice.html
@@ -61,8 +61,6 @@
         </div>
     </section>
     <section class="about-section"></section>
-        <a href="#top" class="button fixed-scroll-button" aria-label="Scroll to Top">
-        &uarr;
-    </a>
+        <a href="#top" class="button fixed-scroll-button" aria-label="Scroll to Top">&#8679;</a>
     </body>
 </html>
