--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                                 <i class="fa-solid fa-link"></i>
                             </a>
                             <div id="pop-up-audit" class="flyover-content">
-                                <embed src="ressources/RegulatoryFlashAudit.pdf" type="application/pdf" width="100%" height="100%" style="border: none;">
+                                <embed src="ressources/RegulatoryFlashAudit.pdf#toolbar=0" type="application/pdf" width="100%" height="100%" style="border: none;">
                             </div>
                         </div>
                         <div style="padding: 0 0 8px 10px">
@@ -124,7 +124,7 @@
                                 <i class="fa-solid fa-link"></i>
                             </a>
                             <div id="pop-up-support" class="flyover-content">
-                                <embed src="ressources/StudyStartUpBoosterPortrait.pdf" type="application/pdf" width="100%" height="100%" style="border: none;">
+                                <embed src="ressources/StudyStartUpBoosterPortrait.pdf#toolbar=0" type="application/pdf" width="100%" height="100%" style="border: none;">
                             </div>
                         </div>
                         <div style="padding: 0 0 0px 10px">
@@ -211,6 +211,7 @@
 </body>
 
 </html>
+
 
 
 
