--- a/LegalNotice_en.html
+++ b/LegalNotice_en.html
@@ -10,9 +10,7 @@
     <body>
     <section id="top" class="about-section" style="padding: 24px 24px 24px 24px;text-transform: uppercase;font-size: 2rem;">
         <a href="index.html" class="section-title" style="vertical-align: baseline;color:#3b3737;text-decoration: none;"> &larr; Back</a>
-        
-        <a href="LegalNotice_fr.html" style="float: right; padding: 10px; cursor: pointer; border: 1px solid #3b3737; background: #fff; font-size: 1rem; text-decoration: none; color: #3b3737;">Français</a>
-        
+        <a href="LegalNotice_fr.html" style="float: right; cursor: pointer; font-size: 1.2rem; text-decoration: none; color: #1773b7;">Fr</a>
     </section>
     <section class="about-section">
         <div class="section-content">
@@ -40,7 +38,7 @@
     <section class="about-section">
         <div class="section-content">
             <div class="about-details">
-                <h2 class="section-title">IT and Liberties</h2>
+                <h2 class="section-title">Privacy policy</h2>
                 <p><br>In accordance with the "Informatique et Libertés" (Data Protection and Freedom of Information) law of January 6, 1978, as amended, and the General Data Protection Regulation (GDPR) of May 25, 2018, you have the right to access, modify, correct, delete, and object to the processing of your personal data and its use for marketing purposes. You can exercise these rights at any time by contacting Sabrina Guittard by email or mail.</p>
             </div>
         </div>
@@ -48,7 +46,7 @@
     <section class="about-section">
         <div class="section-content">
             <div class="about-details">
-                <h2 class="section-title">Responsibility</h2>
+                <h2 class="section-title">Terms of use</h2>
                 <p><br>Longfort Consulting declines all responsibility for any direct or indirect damage - whatever its causes, origins, nature, or consequences - caused by anyone accessing the site or the impossibility of accessing it, as well as the use of the site and/or the reliance placed on any information coming directly or indirectly from the latter.</p>
             </div>
         </div>
