--- a/index.html
+++ b/index.html
@@ -77,25 +77,25 @@
                 <div class="about-details">
                     <h2 class="section-title">Services</h2>
                     <div>
-                        <div style="padding: 32px 0 8px 10px">
+                        <div style="padding: 28px 0 8px 10px">
                             <a class="text" style="font-size: 1.2rem; color: #3d7489">Regulatory Strategy</a>
                         </div>
-                        <div style="padding: 0 0 0px 10px">
+                        <div style="padding: 0 0 0 10px">
                             <a class="text">&#9634; Worldwide Submissions</a>
                         </div>
-                        <div style="padding: 0 0 0px 10px">
+                        <div style="padding: 0 0 0 10px">
                             <a class="text">&#9634; Complex Trial Strategy</a>
                         </div>
-                        <div style="padding: 0 0 28px 10px; position: relative;" class="flyover-container">
+                        <div style="padding: 0 0 0 10px; position: relative;" class="flyover-container">
                             <a class="text">&#9634; Readiness Audits</a>
                             <a href="ressources/RegulatoryFlashAudit.pdf" target="_blank" class="pdf-link">
                                 <i class="fa-solid fa-link"></i>
                             </a>
-                            <div id="pop-up-audit" class="flyover-content">
-                                <embed src="ressources/RegulatoryFlashAudit.pdf#toolbar=0" type="application/pdf" width="100%" height="100%" style="border: none;">
+                            <div id="pop-up-audita" class="flyover-content">
+                                <embed title="thumbnail" src="ressources/RegulatoryFlashAudit.pdf#toolbar=0" type="application/pdf" width="100%" height="100%" style="border: none;">
                             </div>
                         </div>
-                        <div style="padding: 0 0 8px 10px">
+                        <div style="padding: 28px 0 8px 10px">
                             <a class="text" style="font-size: 1.2rem; color: #3d7489">
                                 Operational Coord. (Trial Start-up)
                             </a>
@@ -103,19 +103,19 @@
                         <div style="padding: 0 0 0px 10px">
                             <a class="text">&#9634; Sites Identification and Selection</a>
                         </div>
-                        <div style="padding: 0 0 0px 10px">
+                        <div style="padding: 0 0 0 10px">
                             <a class="text">&#9634; ICF Adaptation</a>
                         </div>
-                        <div style="padding: 0 0 0px 10px">
+                        <div style="padding: 0 0 0 10px">
                             <a class="text">&#9634; CA and EC Submissions</a>
                         </div>
-                        <div style="padding: 0 0 0px 10px">
+                        <div style="padding: 0 0 0 10px">
                             <a class="text">&#9634; Contract and Budget Negotiations</a>
                         </div>
-                        <div style="padding: 0 0 28px 10px">
+                        <div style="padding: 0 0 0 10px">
                             <a class="text">&#9634; Sites Activation</a>
                         </div>
-                        <div style="padding: 0 0 8px 10px">
+                        <div style="padding: 28px 0 8px 10px">
                             <a class="text" style="font-size: 1.2rem; color: #3d7489">Support</a>
                         </div>
                         <div style="padding: 0 0 0px 10px; position: relative;" class="flyover-container">
@@ -124,7 +124,7 @@
                                 <i class="fa-solid fa-link"></i>
                             </a>
                             <div id="pop-up-support" class="flyover-content">
-                                <embed src="ressources/StudyStartUpBoosterPortrait.pdf#toolbar=0" type="application/pdf" width="100%" height="100%" style="border: none;">
+                                <embed title="thumbnail" src="ressources/StudyStartUpBoosterPortrait.pdf#toolbar=0" type="application/pdf" width="100%" height="100%" style="border: none;">
                             </div>
                         </div>
                         <div style="padding: 0 0 0px 10px">
@@ -199,7 +199,7 @@
             <div>
                 <div class="footer">
                     <a>© 2025 Longfort Consulting</a><a>|</a>
-                    <a style="color: #3b3737" href="LegalNotice.html">Legal notice</a><a>|</a>
+                    <a style="color: #3b3737" href="LegalNotice_en.html">Legal notice</a><a>|</a>
                     <a>&#127850;Cookie-free</a><a>|</a>
                     <a>&#x1F33F;0.2g CO²/visit</a>
                 </div>
