--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
                 <div class="about-details">
                     <h2 class="section-title">Services</h2>
                     <div>
-                        <div style="padding: 28px 0 8px 10px">
-                            <a class="text" style="font-size: 1.2rem; color: #3d7489">Regulatory Strategy</a>
+                        <div class="service-heading-wrapper">
+                            <h4 class="service-heading">Regulatory Strategy</h4>
                         </div>
                         <div style="padding: 0 0 0 10px">
                             <a class="text">&#9634; Worldwide Submissions</a>
@@ -95,10 +95,10 @@
                                 <embed title="thumbnail" src="ressources/RegulatoryFlashAudit.pdf#toolbar=0" type="application/pdf" width="100%" height="100%" style="border: none;">
                             </div>
                         </div>
-                        <div style="padding: 28px 0 8px 10px">
-                            <a class="text" style="font-size: 1.2rem; color: #3d7489">
+                        <div class="service-heading-wrapper">
+                            <h4 class="service-heading">
                                 Operational Coord. (Trial Start-up)
-                            </a>
+                            </h4>
                         </div>
                         <div style="padding: 0 0 0px 10px">
                             <a class="text">&#9634; Sites Identification and Selection</a>
@@ -115,8 +115,8 @@
                         <div style="padding: 0 0 0 10px">
                             <a class="text">&#9634; Sites Activation</a>
                         </div>
-                        <div style="padding: 28px 0 8px 10px">
-                            <a class="text" style="font-size: 1.2rem; color: #3d7489">Support</a>
+                        <div class="service-heading-wrapper">
+                            <h4 class="service-heading">Support</h4>
                         </div>
                         <div style="padding: 0 0 0px 10px; position: relative;" class="flyover-container">
                             <a class="text">&#9634; Start-up Project Support</a>
@@ -211,8 +211,3 @@
 </body>
 
 </html>
-
-
-
-
-
