--- a/LegalNotice_fr.html
+++ b/LegalNotice_fr.html
@@ -30,7 +30,7 @@
     <section class="about-section">
         <div class="section-content">
             <div class="about-details">
-                <h2 class="section-title">Hébergement du site:</h2>
+                <h2 class="section-title">Hébergement du site</h2>
                 <p><br>GitHub, Inc.<br>88 Colin P Kelly Jr St<br>San Francisco, CA 94107, USA</p>
             </div>
         </div>
