--- a/LegalNotice_en.html
+++ b/LegalNotice_en.html
@@ -15,7 +15,7 @@
     <section class="about-section">
         <div class="section-content">
             <div class="about-details">
-                <h2 class="section-title">Legal Information:</h2>
+                <h2 class="section-title">Legal Information</h2>
                 <p><br>Company Name: Longfort consulting</p>
                 <p>Legal Status: Simplified Single-Person Stock Company</p>
                 <p>SIRET: 98827651500018</p>
