--- a/LegalNotice_fr.html
+++ b/LegalNotice_fr.html
@@ -15,7 +15,7 @@
     <section class="about-section">
         <div class="section-content">
             <div class="about-details">
-                <h2 class="section-title">Informations légales:</h2>
+                <h2 class="section-title">Informations légales</h2>
                 <p><br>Dénomination sociale: Longfort consulting</p>
                 <p>Status juridique: Société par Actions Simplifiée Unipersonnelle</p>
                 <p>SIRET: 98827651500018</p>
