--- a/LegalNotice_en.html
+++ b/LegalNotice_en.html
@@ -17,7 +17,7 @@
             <div class="about-details">
                 <h2 class="section-title">Legal Information</h2>
                 <p><br>Company Name: Longfort consulting</p>
-                <p>Legal Status: Simplified Single-Person Stock Company</p>
+                <p>Legal Status: SASU</p>
                 <p>SIRET: 98827651500018</p>
                 <p>VAT Number: FR16988276515</p>
                 <p>Address: 2 place Octave Sage, 31100 Toulouse, France</p>
