--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
                 </div>
             </div>
         </section>
-        <section id="services" class="about-section">
-            <div class="section-content">
+        <section class="about-section">
+            <div id="services" class="section-content">
                 <div class="about-details">
                     <h2 class="section-title">Services</h2>
                     <div>
