--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
             </div>
             <div class="about-details"></div>
         </section>
-        <section id="contact" class="about-section">
-            <div class="section-content">
+        <section class="about-section">
+            <div id="contact" class="section-content">
                 <div class="about-details">
                     <h2 class="section-title">Contact</h2>
                     <div>
