--- a/LegalNotice_en.html
+++ b/LegalNotice_en.html
@@ -39,7 +39,10 @@
         <div class="section-content">
             <div class="about-details">
                 <h2 class="section-title">Privacy policy</h2>
-                <p><br>In accordance with the "Informatique et Libertés" (Data Protection and Freedom of Information) law of January 6, 1978, as amended, and the General Data Protection Regulation (GDPR) of May 25, 2018, you have the right to access, modify, correct, delete, and object to the processing of your personal data and its use for marketing purposes. You can exercise these rights at any time by contacting Sabrina Guittard by email or mail.</p>
+                <p><br>In accordance with the "Informatique et Libertés" French law of January 6, 1978, as amended, and the
+                    General Data Protection Regulation (GDPR) of May 25, 2018, you have the right to access, modify, correct,
+                    delete, and object to the processing of your personal data and its use for marketing purposes. You can
+                    exercise these rights at any time by contacting Sabrina Guittard by email or mail.</p>
             </div>
         </div>
     </section>
@@ -47,7 +50,10 @@
         <div class="section-content">
             <div class="about-details">
                 <h2 class="section-title">Terms of use</h2>
-                <p><br>Longfort Consulting declines all responsibility for any direct or indirect damage - whatever its causes, origins, nature, or consequences - caused by anyone accessing the site or the impossibility of accessing it, as well as the use of the site and/or the reliance placed on any information coming directly or indirectly from the latter.</p>
+                <p><br>Longfort Consulting declines all responsibility for any direct or indirect damage - whatever its causes,
+                    origins, nature, or consequences - caused by anyone accessing the site or the impossibility of accessing it,
+                    as well as the use of the site and/or the reliance placed on any information coming directly or indirectly
+                    from the latter.</p>
             </div>
         </div>
     </section>
