--- a/LegalNotice_en.html
+++ b/LegalNotice_en.html
@@ -15,7 +15,7 @@
     <section class="about-section">
         <div class="section-content">
             <div class="about-details">
-                <h2 class="section-title">Legal Information</h2>
+                <h2 class="section-title">Company Information</h2>
                 <p><br>Company Name: Longfort consulting</p>
                 <p>Legal Status: SASU</p>
                 <p>SIRET: 98827651500018</p>
@@ -60,4 +60,5 @@
     <section class="about-section"></section>
         <a href="#top" class="button fixed-scroll-button" aria-label="Scroll to Top">&#8593;</a>
     </body>
+
 </html>
