Revise Legal Notice in French version
Updated the legal notice section and added company information.

--- a/LegalNotice_fr.html
+++ b/LegalNotice_fr.html
@@ -15,7 +15,7 @@
     <section class="about-section">
         <div class="section-content">
             <div class="about-details">
-                <h2 class="section-title">Informations légales</h2>
+                <h2 class="section-title">Informations sur la société</h2>
                 <p><br>Dénomination sociale: Longfort consulting</p>
                 <p>Status juridique: Société par Actions Simplifiée Unipersonnelle</p>
                 <p>SIRET: 98827651500018</p>
@@ -64,4 +64,5 @@
     <section class="about-section"></section>
         <a href="#top" class="button fixed-scroll-button" aria-label="Remonter en haut de page">&#8593;</a>
     </body>
+
 </html>
