Refactor HTML structure and improve formatting

--- a/index.html
+++ b/index.html
@@ -80,64 +80,73 @@
                         <div class="service-heading-wrapper">
                             <h4 class="service-heading">Regulatory Strategy</h4>
                         </div>
-                        <div style="padding: 0 0 0 10px">
-                            <a class="text">&#9634; Worldwide Submissions</a>
-                        </div>
-                        <div style="padding: 0 0 0 10px">
-                            <a class="text">&#9634; Complex Trial Strategy</a>
-                        </div>
-                        <div style="padding: 0 0 0 10px; position: relative;" class="flyover-container">
-                            <a class="text">&#9634; Readiness Audits</a>
-                            <a href="ressources/RegulatoryFlashAudit.pdf" target="_blank" class="pdf-link">
-                                <i class="fa-solid fa-link"></i>
-                            </a>
-                            <div id="pop-up-audita" class="flyover-content">
-                                <embed title="thumbnail" src="ressources/RegulatoryFlashAudit.pdf#toolbar=0" type="application/pdf" width="100%" height="100%" style="border: none;">
-                            </div>
-                        </div>
+                        <ul class="service-list">
+                            <li class="service-item">
+                                <a class="text">&#9634; Worldwide Submissions</a>
+                            </li>
+                            <li class="service-item">
+                                <a class="text">&#9634; Complex Trial Strategy</a>
+                            </li>
+                            <li class="service-item flyover-container">
+                                <a class="text">&#9634; Readiness Audits</a>
+                                <a href="ressources/RegulatoryFlashAudit.pdf" target="_blank" class="pdf-link">
+                                    <i class="fa-solid fa-link"></i>
+                                </a>
+                                <div class="flyover-content">
+                                    <embed title="thumbnail" src="ressources/RegulatoryFlashAudit.pdf#toolbar=0" type="application/pdf" width="100%" height="100%" style="border: none;">
+                                </div>
+                            </li>
+                        </ul>
+
                         <div class="service-heading-wrapper">
                             <h4 class="service-heading">
                                 Operational Coord. (Trial Start-up)
                             </h4>
                         </div>
-                        <div style="padding: 0 0 0px 10px">
-                            <a class="text">&#9634; Sites Identification and Selection</a>
-                        </div>
-                        <div style="padding: 0 0 0 10px">
-                            <a class="text">&#9634; ICF Adaptation</a>
-                        </div>
-                        <div style="padding: 0 0 0 10px">
-                            <a class="text">&#9634; CA and EC Submissions</a>
-                        </div>
-                        <div style="padding: 0 0 0 10px">
-                            <a class="text">&#9634; Contract and Budget Negotiations</a>
-                        </div>
-                        <div style="padding: 0 0 0 10px">
-                            <a class="text">&#9634; Sites Activation</a>
-                        </div>
+                        <ul class="service-list">
+                            <li class="service-item">
+                                <a class="text">&#9634; Sites Identification and Selection</a>
+                            </li>
+                            <li class="service-item">
+                                <a class="text">&#9634; ICF Adaptation</a>
+                            </li>
+                            <li class="service-item">
+                                <a class="text">&#9634; CA and EC Submissions</a>
+                            </li>
+                            <li class="service-item">
+                                <a class="text">&#9634; Contract and Budget Negotiations</a>
+                            </li>
+                            <li class="service-item">
+                                <a class="text">&#9634; Sites Activation</a>
+                            </li>
+                        </ul>
+
                         <div class="service-heading-wrapper">
                             <h4 class="service-heading">Support</h4>
                         </div>
-                        <div style="padding: 0 0 0px 10px; position: relative;" class="flyover-container">
-                            <a class="text">&#9634; Start-up Project Support</a>
-                            <a href="ressources/StudyStartUpBoosterPortrait.pdf" target="_blank" class="pdf-link">
-                                <i class="fa-solid fa-link"></i>
-                            </a>
-                            <div id="pop-up-support" class="flyover-content">
-                                <embed title="thumbnail" src="ressources/StudyStartUpBoosterPortrait.pdf#toolbar=0" type="application/pdf" width="100%" height="100%" style="border: none;">
-                            </div>
-                        </div>
-                        <div style="padding: 0 0 0px 10px">
-                            <a class="text">&#9634; Clinical Operations Assessment</a>
-                        </div>
-                        <div style="padding: 0 0 28px 10px">
-                            <a class="text">&#9634; Regulatory Team Training</a>
-                        </div>
+                        <ul class="service-list">
+                            <li class="service-item flyover-container">
+                                <a class="text">&#9634; Start-up Project Support</a>
+                                <a href="ressources/StudyStartUpBoosterPortrait.pdf" target="_blank" class="pdf-link">
+                                    <i class="fa-solid fa-link"></i>
+                                </a>
+                                <div class="flyover-content">
+                                    <embed title="thumbnail" src="ressources/StudyStartUpBoosterPortrait.pdf#toolbar=0" type="application/pdf" width="100%" height="100%" style="border: none;">
+                                </div>
+                            </li>
+                            <li class="service-item">
+                                <a class="text">&#9634; Clinical Operations Assessment</a>
+                            </li>
+                            <li class="service-item" style="padding-bottom: 28px;">
+                                <a class="text">&#9634; Regulatory Team Training</a>
+                            </li>
+                        </ul>
+
                         <span class="buttons">
                             <a href="#contact" class="button">Leave a message</a>
                         </span>
                     </div>
-                </div>
+                    </div>
                 <div class="about-image-wrapper">
                     <img src="ressources/timely.webp"
                         alt="Glass beakers on a table in a sunny, outdoor setting, representing scientific research."
@@ -209,7 +218,4 @@
     <a href="#about" class="button fixed-scroll-button" aria-label="Scroll to Top">&#8593;</a>
     <script src="script.js"></script>
 </body>
-
-
 </html>
-
