Fix formatting issues in index.html

--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
                         </div>
                         <ul class="service-list">
                             <li class="service-item">
-                                <a class="text">&#9634; Worldwide Submissions</a>
+                                <a class="text">Worldwide Submissions</a>
                             </li>
                             <li class="service-item">
-                                <a class="text">&#9634; Complex Trial Strategy</a>
+                                <a class="text">Complex Trial Strategy</a>
                             </li>
                             <li class="service-item flyover-container">
-                                <a class="text">&#9634; Readiness Audits</a>
+                                <a class="text">Readiness Audits</a>
                                 <a href="ressources/RegulatoryFlashAudit.pdf" target="_blank" class="pdf-link">
                                     <i class="fa-solid fa-link"></i>
                                 </a>
@@ -105,19 +105,19 @@
                         </div>
                         <ul class="service-list">
                             <li class="service-item">
-                                <a class="text">&#9634; Sites Identification and Selection</a>
+                                <a class="text">Sites Identification and Selection</a>
                             </li>
                             <li class="service-item">
-                                <a class="text">&#9634; ICF Adaptation</a>
+                                <a class="text">ICF Adaptation</a>
                             </li>
                             <li class="service-item">
-                                <a class="text">&#9634; CA and EC Submissions</a>
+                                <a class="text">CA and EC Submissions</a>
                             </li>
                             <li class="service-item">
-                                <a class="text">&#9634; Contract and Budget Negotiations</a>
+                                <a class="text">Contract and Budget Negotiations</a>
                             </li>
                             <li class="service-item">
-                                <a class="text">&#9634; Sites Activation</a>
+                                <a class="text">Sites Activation</a>
                             </li>
                         </ul>
 
@@ -126,7 +126,7 @@
                         </div>
                         <ul class="service-list">
                             <li class="service-item flyover-container">
-                                <a class="text">&#9634; Start-up Project Support</a>
+                                <a class="text">Start-up Project Support</a>
                                 <a href="ressources/StudyStartUpBoosterPortrait.pdf" target="_blank" class="pdf-link">
                                     <i class="fa-solid fa-link"></i>
                                 </a>
@@ -135,10 +135,10 @@
                                 </div>
                             </li>
                             <li class="service-item">
-                                <a class="text">&#9634; Clinical Operations Assessment</a>
+                                <a class="text">Clinical Operations Assessment</a>
                             </li>
                             <li class="service-item" style="padding-bottom: 28px;">
-                                <a class="text">&#9634; Regulatory Team Training</a>
+                                <a class="text">Regulatory Team Training</a>
                             </li>
                         </ul>
 
@@ -146,7 +146,7 @@
                             <a href="#contact" class="button">Leave a message</a>
                         </span>
                     </div>
-                    </div>
+                </div>
                 <div class="about-image-wrapper">
                     <img src="ressources/timely.webp"
                         alt="Glass beakers on a table in a sunny, outdoor setting, representing scientific research."
@@ -218,4 +218,6 @@
     <a href="#about" class="button fixed-scroll-button" aria-label="Scroll to Top">&#8593;</a>
     <script src="script.js"></script>
 </body>
+
+
 </html>
