--- a/index.html
+++ b/index.html
@@ -5,12 +5,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="color-scheme" content="only light" />
+    <meta property="og:title" content="Longfort Consulting | Clinical Studies Consultant" />
+    <meta property="og:description" content="Longfort Consulting offers regulatory expertise for clinical trials." />
+    <meta property="og:image" content="https://longfort-consulting.com/ressources/socialNetworkImage.png" />
+    <meta property="og:url" content="https://longfort-consulting.com" />
+    <meta property="og:type" content="website" />
     <title>Longfort Consulting | Clinical Studies Consultant</title>
     <meta name="description"
         content="Longfort Consulting offers regulatory expertise to secure clinical trial approval in a timely and quality-controlled manner.
     Benefit from our guidance in oncology, immunotherapy, rare diseases, pediatrics, and gene therapy to achieve successful trial outcomes.
     Conduct robust clinical trials using bulletproof protocols and a tailored document set to obtain first-time approval from regulatory authorities." />
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
     <link rel="stylesheet" href="style.css" />
 </head>
