--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                     </div>
                 </div>
                 <div class="about-image-wrapper">
-                    <img src="ressources/timely.webp"
+                    <img id="glassTime" src="ressources/timely.webp"
                         alt="Glass beakers on a table in a sunny, outdoor setting, representing scientific research."
                         class="about-image" />
                 </div>
