--- a/index.html
+++ b/index.html
@@ -202,6 +202,8 @@
                 </div>
             </div>
         </section>
+        <section id="blank" class="about-section">
+        </section>
     </main>
     <footer class="footer">
         <section class="footer-section">
