--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </nav>
     </header>
     <main class="main">
-        <section id="blank" class="about-section">
+        <section class="about-section">
         </section>
         <section id="about" class="about-section">
             <div class="section-content">
@@ -202,7 +202,7 @@
                 </div>
             </div>
         </section>
-        <section id="blank" class="about-section">
+        <section class="about-section">
         </section>
     </main>
     <footer class="footer">
