--- a/index.html
+++ b/index.html
@@ -91,14 +91,16 @@
                             <li class="service-item">
                                 <a class="text">Complex Trial Strategy</a>
                             </li>
-                            <li class="service-item flyover-container">
+                            <li class="service-item">
                                 <a class="text">Readiness Audits</a>
-                                <a href="ressources/RegulatoryFlashAudit.pdf" target="_blank" class="pdf-link">
-                                    <i class="fa-solid fa-link"></i>
-                                </a>
-                                <div class="flyover-content">
-                                    <embed title="thumbnail" src="ressources/RegulatoryFlashAudit.pdf#toolbar=0" type="application/pdf" width="100%" height="100%" style="border: none;">
-                                </div>
+                                <span class="flyover-container">
+                                    <a href="ressources/RegulatoryFlashAudit.pdf" target="_blank" class="pdf-link">
+                                        <i class="fa-solid fa-link"></i>
+                                    </a>
+                                    <div class="flyover-content">
+                                        <embed title="thumbnail" src="ressources/RegulatoryFlashAudit.pdf#toolbar=0" type="application/pdf" width="100%" height="100%" style="border: none;">
+                                    </div>
+                                </span>
                             </li>
                         </ul>
 
@@ -125,14 +127,16 @@
 
                         <h3 class="service-heading">Support</h3>
                         <ul class="service-list">
-                            <li class="service-item flyover-container">
+                            <li class="service-item">
                                 <a class="text">Start-up Project Support</a>
-                                <a href="ressources/StudyStartUpBoosterPortrait.pdf" target="_blank" class="pdf-link">
-                                    <i class="fa-solid fa-link"></i>
-                                </a>
-                                <div class="flyover-content">
-                                    <embed title="thumbnail" src="ressources/StudyStartUpBoosterPortrait.pdf#toolbar=0" type="application/pdf" width="100%" height="100%" style="border: none;">
-                                </div>
+                                <span class="flyover-container">
+                                    <a href="ressources/StudyStartUpBoosterPortrait.pdf" target="_blank" class="pdf-link">
+                                        <i class="fa-solid fa-link"></i>
+                                    </a>
+                                    <div class="flyover-content">
+                                        <embed title="thumbnail" src="ressources/StudyStartUpBoosterPortrait.pdf#toolbar=0" type="application/pdf" width="100%" height="100%" style="border: none;">
+                                    </div>
+                                </span>
                             </li>
                             <li class="service-item">
                                 <a class="text">Clinical Operations Assessment</a>
@@ -223,4 +227,3 @@
 
 
 </html>
-
