--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="color-scheme" content="only light" />
     <meta property="og:title" content="Longfort Consulting | Clinical Studies Consultant" />
     <meta property="og:description" content="Longfort Consulting offers regulatory expertise for clinical trials." />
-    <meta property="og:image" content="https://longfort-consulting.com/ressources/socialNetworkImage.png" />
+    <meta property="og:image" content="https://longfort-consulting.com/ressources/socialNetworkImage.jpg" />
     <meta property="og:url" content="https://longfort-consulting.com" />
     <meta property="og:type" content="website" />
     <title>Longfort Consulting | Clinical Studies Consultant</title>
@@ -227,3 +227,4 @@
 
 
 </html>
+
