--- a/LegalNotice_en.html
+++ b/LegalNotice_en.html
@@ -22,7 +22,7 @@
                 <p>VAT Number: FR16988276515</p>
                 <p>Address: 2 place Octave Sage, 31100 Toulouse, France</p>
                 <p>Phone Number: +33 (0)6 52 50 24 98</p>
-                <p>Publication Director: Sabrina Guittard</p>
+                <p>Author & publishing: Sabrina Guittard</p>
                 <p>Activity: Clinical research consulting</p>
             </div>
         </div>
