--- a/LegalNotice_fr.html
+++ b/LegalNotice_fr.html
@@ -22,7 +22,7 @@
                 <p>Numéro de TVA: FR16988276515</p>
                 <p>Adresse: 2 place Octave Sage, 31100 Toulouse, France</p>
                 <p>n° de téléphone: +33 (0)6 52 50 24 98</p>
-                <p>Responsable de publication: Sabrina Guittard</p>
+                <p>Auteur: Jean-Louis Guittard</p>
                 <p>Activité: Conseil en recherche clinique</p>
             </div>
         </div>
