--- a/index.html
+++ b/index.html
@@ -6,15 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="color-scheme" content="only light" />
     <meta property="og:title" content="Longfort Consulting | Clinical Studies Consultant" />
-    <meta property="og:description" content="Longfort Consulting offers regulatory expertise for oncology, pediatrics and gene therapy clinical trials." />
-    <meta property="og:image" content="https://longfort-consulting.com/ressources/socialNetworkImage.jpg" />
+    <meta property="og:description" content="Longfort Consulting offers regulatory expertise to secure clinical trial approval in a timely and quality-controlled manner." />    <meta property="og:image" content="https://longfort-consulting.com/ressources/socialNetworkImage.jpg" />
     <meta property="og:url" content="https://longfort-consulting.com" />
     <meta property="og:type" content="website" />
     <title>Longfort Consulting | Clinical Studies Consultant</title>
     <meta name="description"
         content="Longfort Consulting offers regulatory expertise to secure clinical trial approval in a timely and quality-controlled manner.
-    Benefit from our guidance in oncology, immunotherapy, rare diseases, pediatrics, and gene therapy to achieve successful trial outcomes.
-    Conduct robust clinical trials using bulletproof protocols and a tailored document set to obtain first-time approval from regulatory authorities." />
+    Benefits from our guidance in oncology, immunotherapy, rare diseases, pediatrics, and gene therapy to achieve successful trial outcomes.
+    Conducts robust clinical trials using bulletproof protocols and a purpose-built document pack to obtain first-time approval from regulatory authorities." />
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
@@ -49,8 +48,6 @@
         </nav>
     </header>
     <main class="main">
-        <section class="about-section">
-        </section>
         <section id="about" class="about-section">
             <div class="section-content">
                 <div class="about-image-wrapper">
@@ -65,12 +62,12 @@
                         timely and quality-controlled manner.
                     </p>
                     <p class="text">
-                        Benefit from our guidance in oncology, immunotherapy, rare diseases, pediatrics, and
+                        Benefits from our guidance in oncology, immunotherapy, rare diseases, pediatrics, and
                         gene therapy to reach successful trial outcomes.
                     </p>
                     <p class="text">
-                        Conduct robust <b>clinical trials</b> using <b>bulletproof</b> protocols and a tailored
-                        document set to obtain <b>first-time approval</b> from regulatory authorities.
+                        Conducts robust <b>clinical trials</b> using <b>bulletproof</b> protocols and a purpose-built document pack
+                        to obtain <b>first-time approval</b> from regulatory authorities.
                     </p>
                     <span class="buttons">
                         <a href="#services" class="button">Learn more</a>
@@ -151,8 +148,8 @@
                         </span>
                     </div>
                 </div>
-                <div class="about-image-wrapper">
-                    <img id="glassTime" src="ressources/timely.webp"
+                <div id="glassTime" class="about-image-wrapper">
+                    <img src="ressources/timely.webp"
                         alt="Glass beakers on a table in a sunny, outdoor setting, representing scientific research."
                         class="about-image" />
                 </div>
@@ -201,8 +198,8 @@
             <div class="blog-content">
                 <div class="about-details">
                     <h2 class="section-title">Blog</h2>
-                    <script src="https://elfsightcdn.com/platform.js" async></script>
-                    <div class="elfsight-app-37e8d025-f183-418a-832d-4a11719773ef" data-elfsight-app-lazy></div>
+                    <!--<script src="https://elfsightcdn.com/platform.js" async></script>
+                    <div class="elfsight-app-37e8d025-f183-418a-832d-4a11719773ef" data-elfsight-app-lazy></div>-->
                 </div>
             </div>
         </section>
@@ -227,7 +224,3 @@
 
 
 </html>
-
-
-
-
