--- a/index.html
+++ b/index.html
@@ -198,8 +198,8 @@
             <div class="blog-content">
                 <div class="about-details">
                     <h2 class="section-title">Blog</h2>
-                    <!--<script src="https://elfsightcdn.com/platform.js" async></script>
-                    <div class="elfsight-app-37e8d025-f183-418a-832d-4a11719773ef" data-elfsight-app-lazy></div>-->
+                    <script src="https://elfsightcdn.com/platform.js" async></script>
+                    <div class="elfsight-app-37e8d025-f183-418a-832d-4a11719773ef" data-elfsight-app-lazy></div>
                 </div>
             </div>
         </section>
@@ -224,3 +224,4 @@
 
 
 </html>
+
