--- a/index.html
+++ b/index.html
@@ -50,11 +50,9 @@
     <main class="main">
         <section id="about" class="about-section">
             <div class="section-content">
-                <div class="about-image-wrapper">
-                    <img id="SciImg" src="ressources/image.webp"
+                <div class="about-image-wrapper image-gallery-wrapper"> <button class="image-nav-button prev-button fas fa-chevron-left" aria-label="Previous image"></button> <img id="SciImg" src="ressources/test.png"
                         alt="Two scientists in a lab coat reviewing documents, with 'Clinical Trial' and related icons overlaid."
-                        class="about-image" />
-                </div>
+                        class="about-image image-to-cycle" /> <button class="image-nav-button next-button fas fa-chevron-right" aria-label="Next image"></button> </div>
                 <div class="about-details">
                     <h2 class="section-title">About Us</h2>
                     <p class="text">
@@ -224,5 +222,3 @@
 
 
 </html>
-
-
